// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render popup 1`] = `
<div
  className="ReportCommentForm-root coral coral-reportPopover"
  data-testid="report-comment-form"
  role="none"
>
  <form
    autoComplete="off"
    className="ReportCommentForm-root"
    id="report-comments-form"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="ReportCommentForm-title"
      >
        Report This Comment
      </div>
      <div
        className="ReportCommentForm-heading"
      >
        Why are you reporting this comment?
      </div>
      <ul
        className="ReportCommentForm-list"
      >
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OFFENSIVE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
            >
              This comment is offensive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_ABUSIVE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
            >
              This commenter is being abusive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-DISAGREE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="DISAGREE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-DISAGREE"
            >
              I disagree with this comment
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_SPAM"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
            >
              This looks like an ad or marketing
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OTHER"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
            >
              Other
            </label>
          </div>
        </li>
      </ul>
      <label
        className="ReportCommentForm-heading"
        htmlFor="comments-reportCommentForm-additionalDetails--comment-0"
      >
        Additional information 
        <span
          className="ReportCommentForm-detail"
        >
          Optional
        </span>
      </label>
      <div
        className="ReportCommentForm-detail"
      >
        Please leave any additional information that may be helpful to our moderators.
      </div>
      <div>
        <div
          className="ReportCommentForm-textAreaContainer"
        >
          <textarea
            className="ReportCommentForm-textarea"
            data-testid="report-comment-additional-information"
            disabled={false}
            id="comments-reportCommentForm-additionalDetails--comment-0"
            name="additionalDetails"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          />
          <div
            className="ReportCommentForm-textareaInfo"
          >
            <div>
              Max. 500 Characters
            </div>
          </div>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd Flex-alignCenter"
      >
        <button
          className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-reportPopover-cancelButton ReportCommentForm-cancel"
          data-variant="outlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-disabled Button-upperCase coral coral-reportPopover-submitButton"
          data-variant="filled"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`render popup expanded 1`] = `
<div
  className="ReportCommentForm-root coral coral-reportPopover"
  data-testid="report-comment-form"
  role="none"
>
  <form
    autoComplete="off"
    className="ReportCommentForm-root"
    id="report-comments-form"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="ReportCommentForm-title"
      >
        Report This Comment
      </div>
      <div
        className="ReportCommentForm-heading"
      >
        Why are you reporting this comment?
      </div>
      <ul
        className="ReportCommentForm-list"
      >
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={true}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OFFENSIVE"
            />
            <label
              className="RadioButton-label RadioButton-labelChecked"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OFFENSIVE"
            >
              This comment is offensive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_ABUSIVE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_ABUSIVE"
            >
              This commenter is being abusive
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-DISAGREE"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="DISAGREE"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-DISAGREE"
            >
              I disagree with this comment
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_SPAM"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_SPAM"
            >
              This looks like an ad or marketing
            </label>
          </div>
        </li>
        <li>
          <div
            className="Box-root Flex-root RadioButton-root Flex-flex Flex-alignCenter"
          >
            <input
              checked={false}
              className="RadioButton-input"
              disabled={false}
              id="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
              name="reason"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="COMMENT_REPORTED_OTHER"
            />
            <label
              className="RadioButton-label"
              htmlFor="reportComment-popover--reason-COMMENT_REPORTED_OTHER"
            >
              Other
            </label>
          </div>
        </li>
      </ul>
      <label
        className="ReportCommentForm-heading"
        htmlFor="comments-reportCommentForm-additionalDetails--comment-0"
      >
        Additional information 
        <span
          className="ReportCommentForm-detail"
        >
          Optional
        </span>
      </label>
      <div
        className="ReportCommentForm-detail"
      >
        Please leave any additional information that may be helpful to our moderators.
      </div>
      <div>
        <div
          className="ReportCommentForm-textAreaContainer"
        >
          <textarea
            className="ReportCommentForm-textarea"
            data-testid="report-comment-additional-information"
            disabled={false}
            id="comments-reportCommentForm-additionalDetails--comment-0"
            name="additionalDetails"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          />
          <div
            className="ReportCommentForm-textareaInfo"
          >
            <div>
              Max. 500 Characters
            </div>
          </div>
        </div>
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd Flex-alignCenter"
      >
        <button
          className="BaseButton-root Button-base Button-outlined Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-reportPopover-cancelButton ReportCommentForm-cancel"
          data-variant="outlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorSecondary Button-upperCase coral coral-reportPopover-submitButton"
          data-variant="filled"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`report comment as offensive 1`] = `
<div
  aria-labelledby="comment-comment-0-label"
  className="CommentContainer-root coral coral-comment coral coral-reacted-0"
  data-key-stop={true}
  data-testid="comment-comment-0"
  id="comment-comment-0"
  onFocus={[Function]}
  role="article"
  tabIndex={-1}
>
  <div
    className="Hidden-root"
    id="comment-comment-0-label"
  >
    <span>
      Comment from Markus 
      <time
        className="RelativeTime-root"
        dateTime="2018-07-06T18:24:00.000Z"
        title="2018-07-06T18:24:00.000Z"
      >
        2018-07-06T18:24:00.000Z
      </time>
    </span>
  </div>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="coral coral-comment-collapse-toggle-indent Indent-root"
    >
      <div
        className="CommentContainer-indentedCommentRoot coral coral-indent coral-indent-0 Indent-open"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignFlexStart gutter Flex-spacing-1"
        >
          <button
            aria-label="Hide comment by Markus and its replies"
            className="BaseButton-root IndentedComment-toggleButton coral coral-comment-collapse-toggle"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span
              className="SvgIcon-root SvgIcon-sm IndentedComment-icon coral coral-comment-collapse-toggle-icon SvgIcon-strokeWidthRegular"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0.75 12.038L23.25 12.038"
                  fill="none"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </span>
          </button>
          <div
            className="Box-root HorizontalGutter-root Comment-root HorizontalGutter-half"
          >
            <div
              className="Box-root Flex-root coral coral-comment-topBar Flex-flex Flex-justifySpaceBetween Flex-alignFlexStart Flex-directionRow"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter"
              >
                <div
                  className="Comment-username"
                >
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="username-popover-comment-0"
                      aria-label="User Markus"
                      className="BaseButton-root CommentContainer-usernameButton coral coral-username coral-comment-username"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Username-root"
                      >
                        Markus
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A popover with more user information"
                      id="username-popover-comment-0"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-wrap Flex-alignCenter Flex-directionRow"
                >
                  <button
                    className="BaseButton-root Timestamp-root"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <time
                      className="RelativeTime-root Timestamp-text Comment-timestamp coral coral-timestamp coral-comment-timestamp"
                      dateTime="2018-07-06T18:24:00.000Z"
                      title="2018-07-06T18:24:00.000Z"
                    >
                      2018-07-06T18:24:00.000Z
                    </time>
                  </button>
                </div>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifyFlexEnd"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
                />
              </div>
            </div>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
            >
              <div
                className="HTMLContent-root coral coral-content coral-comment-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Joining Too",
                  }
                }
              />
              <div
                className="Box-root Flex-root coral coral-comment-actionBar Flex-flex Flex-justifySpaceBetween"
              >
                <div
                  className="Box-root Flex-root CommentContainer-actionBar Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <button
                    aria-label="Respect comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
                    data-testid="comment-reaction-button"
                    data-variant="flat"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <span
                        className="SvgIcon-root SvgIcon-sm ReactionButton-icon SvgIcon-strokeWidthRegular"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.33014 8.42566H0.830139V21.9257H5.33014V8.42566Z"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                          />
                          <path
                            d="M5.33099 20.421C9.88265 20.421 10.2535 22.2335 16.4162 22.6037C18.1465 22.7076 19.3882 22.7972 20.5406 21.3197C23.0714 18.0748 24.287 10.3581 21.8323 10.3581H16.8181C15.7136 10.3581 14.8181 9.46264 14.8181 8.35807V4.46807C14.8181 1.44807 10.4002 -0.136834 10.4002 3.24807C10.4002 5.67566 9.4752 7.34449 7.92993 8.81464C7.17404 9.53378 6.29025 9.91876 5.33099 10.1244"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                  <button
                    aria-label="Reply to comment by Markus"
                    aria-pressed={false}
                    className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-comment-replyButton"
                    data-testid="comment-reply-button"
                    data-variant="flat"
                    disabled={false}
                    id="comments-commentContainer-replyButton-comment-0"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <span
                        className="SvgIcon-root SvgIcon-sm ReplyButton-icon SvgIcon-strokeWidthRegular"
                      >
                        <svg
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <title>
                            email-action-reply
                          </title>
                          <path
                            d="M9.709,6.837a1.5,1.5,0,0,0-2.6-1.018L1.648,11.733a1.5,1.5,0,0,0,0,2.034l5.458,5.914a1.5,1.5,0,0,0,2.6-1.018V15.75h6a7.5,7.5,0,0,1,7.5,7.5v-6a7.5,7.5,0,0,0-7.5-7.5h-6Z"
                            fill="none"
                            stroke="currentColor"
                            strokeLinecap="round"
                            strokeLinejoin="round"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                  <div
                    className="Popover-root"
                  >
                    <button
                      aria-controls="permalink-popover-comment-0"
                      aria-label="Share comment by Markus"
                      aria-pressed={false}
                      className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary coral coral-comment-shareButton"
                      data-variant="flat"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Box-root Flex-root Flex-flex Flex-alignCenter"
                      >
                        <span
                          className="SvgIcon-root SvgIcon-sm PermalinkButton-icon SvgIcon-strokeWidthRegular"
                        >
                          <svg
                            viewBox="-0.25 -0.25 24.5 24.5"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M1.500 11.250 A3.750 3.750 0 1 0 9.000 11.250 A3.750 3.750 0 1 0 1.500 11.250 Z"
                              fill="none"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                            />
                            <path
                              d="M15.000 6.000 A3.750 3.750 0 1 0 22.500 6.000 A3.750 3.750 0 1 0 15.000 6.000 Z"
                              fill="none"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                            />
                            <path
                              d="M15.000 18.000 A3.750 3.750 0 1 0 22.500 18.000 A3.750 3.750 0 1 0 15.000 18.000 Z"
                              fill="none"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                            />
                            <path
                              d="M8.746 9.891L15.254 7.36"
                              fill="none"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                            />
                            <path
                              d="M8.605 12.928L15.395 16.323"
                              fill="none"
                              stroke="currentColor"
                              strokeLinecap="round"
                              strokeLinejoin="round"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                    <div
                      aria-hidden={true}
                      aria-label="A dialog showing a permalink to the comment"
                      id="permalink-popover-comment-0"
                      role="dialog"
                    />
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifySpaceBetween Flex-alignCenter Flex-directionRow gutter"
                >
                  <div
                    aria-label="Reported"
                    className="coral-reportedButton coral-comment-reportedButton ReportButton-reported"
                    data-testid="comment-reported-button"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-alignCenter"
                    >
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ReportButton-icon"
                      >
                        flag
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="CallOut-root CallOut-success CallOut-leftBorder"
    >
      <div
        className="CallOut-container"
      >
        <div
          className="CallOut-icon CallOut-success CallOut-leftIcon"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-sm coral coral-icon"
          >
            check_circle
          </i>
        </div>
        <div
          aria-live="polite"
          className="CallOut-content"
        >
          <div
            className="CallOut-title CallOut-titleMargin CallOut-titleBold"
          >
            Thank you!
          </div>
          <div
            className="CallOut-body"
          >
            We’ve received your message. Reports from members like you keep the community safe.
          </div>
        </div>
        <div
          className="CallOut-actions"
        >
          <button
            aria-label="Close"
            className="BaseButton-root"
            data-testid="callout-close-button"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon"
            >
              close
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
